增加新的文件

--- a/.gitignore
+++ b/.gitignore
@@ -1,1 +1,5 @@
 /Bin
+/AddIns/AoGraphic/Doubts.AoGraphic/obj
+/AddIns/AoGraphic/Doubts.AoGraphic/bin
+/AddIns/Miracle/Miracle/bin
+/AddIns/Miracle/Miracle/obj
