增加新的功能

--- a/Doubts.Framework/Doubts.Framework.csproj
+++ b/Doubts.Framework/Doubts.Framework.csproj
@@ -47,15 +47,23 @@
     <Compile Include="DoozerImpl\RendererDoozer.cs" />
     <Compile Include="DoubtsException.cs" />
     <Compile Include="EL\AomiEL.cs" />
+    <Compile Include="EL\Compiler\BindingContext.cs" />
+    <Compile Include="EL\Compiler\CompilationContext.cs" />
+    <Compile Include="EL\Compiler\Converter\ElPropertyConverter.cs" />
+    <Compile Include="EL\Compiler\Converter\TokenConverter.cs" />
+    <Compile Include="EL\Compiler\Structure\ElExpression.cs" />
+    <Compile Include="EL\Compiler\Structure\ElExpressionType.cs" />
+    <Compile Include="EL\Compiler\Structure\ElPropertyExpression.cs" />
+    <Compile Include="EL\Compiler\Translation\ElLamdbaExprTransactor.cs" />
+    <Compile Include="EL\Compiler\Translation\ElExprTransactor.cs" />
+    <Compile Include="EL\Compiler\Translation\ElPropertyExprTransactor.cs" />
     <Compile Include="EL\DefaultELAnalyzer.cs" />
-    <Compile Include="EL\ELCompiler.cs" />
+    <Compile Include="EL\Compiler\ELCompiler.cs" />
     <Compile Include="EL\ELException.cs" />
     <Compile Include="EL\EnumerableExtensions.cs" />
     <Compile Include="EL\ExpressionBuilder.cs" />
     <Compile Include="EL\FunctionBuilder.cs" />
     <Compile Include="EL\IELAnalyzer.cs" />
-    <Compile Include="EL\Parsers\Parser.cs" />
-    <Compile Include="EL\Parsers\PropertyParser.cs" />
     <Compile Include="EL\Tokenizer.cs" />
     <Compile Include="EL\Tokens\ExpressionToken.cs" />
     <Compile Include="EL\Tokens\PropertyExpressionToken.cs" />
